--- a/googlewebdesigner/120-600/120-600.html
+++ b/googlewebdesigner/120-600/120-600.html
@@ -61,47 +61,47 @@
       position: absolute;
       width: 91px;
       height: 53px;
-      left: 35px;
       top: 16px;
+      left: 15px;
     }
     .gwd-image-1u0i {
       position: absolute;
       width: 92px;
       height: 81px;
-      left: 34px;
       top: 124px;
       transform: translate3d(0px, -50px, 0px);
       opacity: 0;
+      left: 14px;
     }
     .gwd-image-cu11 {
       position: absolute;
       width: 138px;
       height: 210px;
-      left: 11px;
       top: 246px;
       transform-style: preserve-3d;
       transform: translate3d(40px, 0px, 0px) scale3d(0.5, 0.5, 1);
       opacity: 0;
+      left: -9px;
     }
     .gwd-image-1tke {
       position: absolute;
       width: 48px;
-      left: 56px;
       top: 488px;
       transform-style: preserve-3d;
       height: 0px;
       transform: translate3d(0px, 0px, 0px);
       opacity: 1;
+      left: 36px;
     }
     .gwd-div-gigv {
       position: absolute;
       left: 0px;
-      width: 160px;
       height: 380px;
       background-image: none;
       background-color: rgb(232, 231, 233);
       top: 420px;
       opacity: 0;
+      width: 120px;
     }
     .gwd-div-11y4 {
       background-color: rgb(77, 97, 118);
@@ -379,61 +379,61 @@
       position: absolute;
       width: 91px;
       height: 35px;
-      left: 35px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, 0px, 0px);
       top: 220px;
+      left: 15px;
     }
     .gwd-image-xnf9 {
       position: absolute;
       width: 91px;
       height: 32px;
-      left: 35px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, 0px, 0px);
       top: 220px;
+      left: 15px;
     }
     .gwd-image-ry0k {
       position: absolute;
       width: 91px;
       height: 34px;
-      left: 35px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, 0px, 0px);
       top: 220px;
+      left: 15px;
     }
     .gwd-image-efb4 {
       position: absolute;
       width: 91px;
       height: 26px;
-      left: 35px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, 0px, 0px);
       top: 220px;
+      left: 15px;
     }
     .gwd-image-17kk {
       position: absolute;
       width: 91px;
       height: 28px;
-      left: 35px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, 0px, 0px);
       top: 220px;
+      left: 15px;
     }
     .gwd-image-b87i {
       position: absolute;
       width: 91px;
       height: 30px;
-      left: 35px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, 0px, 0px);
       top: 220px;
+      left: 15px;
     }
     @keyframes gwd-gen-57q0gwdanimation_gwd-keyframes {
       0% {
@@ -559,40 +559,40 @@
       position: absolute;
       width: 72px;
       height: 28px;
-      left: 44px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, 0px, 0px);
       top: 457px;
+      left: 24px;
     }
     .gwd-image-vhaw {
       position: absolute;
       width: 39px;
       height: 39px;
-      left: 61px;
       top: 543px;
       transform: translate3d(0px, 70px, 0px);
       transform-style: preserve-3d;
+      left: 41px;
     }
     .gwd-image-4lmm {
       position: absolute;
       width: 76px;
       height: 15px;
-      left: 42px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(0px, -15px, 0px);
       top: 510px;
+      left: 22px;
     }
     .gwd-image-hmm8 {
       position: absolute;
       width: 76px;
       height: 11px;
-      left: 42px;
       opacity: 0;
       transform-style: preserve-3d;
       transform: translate3d(80px, 0px, 0px);
       top: 498px;
+      left: 22px;
     }
     .gwd-image-2wrq {
       position: absolute;
@@ -600,7 +600,7 @@
       height: 25px;
       opacity: 0;
       top: 550px;
-      left: 87px;
+      left: 67px;
     }
     @keyframes gwd-gen-yrwsgwdanimation_gwd-keyframes {
       0% {
@@ -689,7 +689,6 @@
       top: 550px;
       transform-style: preserve-3d;
       width: 45px;
-      left: 75px;
       opacity: 0;
       border-style: solid;
       border-image-source: none;
@@ -700,6 +699,7 @@
       border-width: 0px 1px 0px 0px;
       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
       background-color: rgb(77, 97, 118);
+      left: 55px;
     }
     @keyframes gwd-gen-10ldgwdanimation_gwd-keyframes {
       0% {
@@ -747,8 +747,14 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      width: 160px;
       height: 600px;
+      width: 120px;
+    }
+    .gwd-div-15j2 {
+      width: 120px;
+    }
+    .gwd-page-11ax {
+      width: 120px;
     }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
@@ -794,8 +800,8 @@
       <gwd-metric-event source="gwd-taparea_1" event="tapareaexit" metric="" exit="Exit"></gwd-metric-event>
     </gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
-      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="160px" data-gwd-height="600px" data-gwd-animation-labels="start,0">
-        <div class="gwd-page-content gwd-page-size">
+      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-11ax" data-gwd-width="120px" data-gwd-height="600px" data-gwd-animation-labels="start,0">
+        <div class="gwd-page-content gwd-page-size gwd-div-15j2">
           <gwd-image id="logo" source="assets/logo.png" scaling="stretch" class="gwd-image-ilby"></gwd-image>
           <div class="gwd-div-gigv gwd-div-rqgl gwd-gen-5c2lgwdanimation" id="bg-1"></div>
           <div class="gwd-div-gigv gwd-div-11y4 gwd-gen-19n8gwdanimation" id="bg-2"></div>
@@ -822,7 +828,7 @@
           <div class="gwd-div-bqv3 gwd-gen-10ldgwdanimation" id="PIF-line"></div>
           <gwd-image id="PIF-logo" source="assets/PIF-logo.png" scaling="stretch" class="gwd-image-vhaw gwd-gen-2a20gwdanimation"></gwd-image>
           <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="19000"></div>
-          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-ge43"></gwd-taparea>
+          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-ge43" data-gwd-tl-locked="" data-gwd-tl-hidden=""></gwd-taparea>
         </div>
       </gwd-page>
     </gwd-pagedeck>
