--- a/googlewebdesigner/300-600/300-600/300-600.html
+++ b/googlewebdesigner/300-600/300-600/300-600.html
@@ -500,6 +500,338 @@
     #page1.gwd-play-animation .gwd-gen-17sygwdanimation {
       animation: 3.3s linear 8.1s 1 normal forwards running gwd-gen-17sygwdanimation_gwd-keyframes;
     }
+    @keyframes gwd-gen-1llfgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -200px, 0px);
+        opacity: 0;
+        animation-timing-function: ease-in-out;
+      }
+      21.2121% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 0.25;
+        animation-timing-function: linear;
+      }
+      78.7879% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 0.25;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        transform: translate3d(0px, -200px, 0px);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1llfgwdanimation {
+      animation: 3.3s linear 10.7s 1 normal forwards running gwd-gen-1llfgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1gj2gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(250px, 0px, 0px);
+        opacity: 0;
+        animation-timing-function: ease-in-out;
+      }
+      21.2121% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+      78.7879% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 1;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        transform: translate3d(-250px, 0px, 0px);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1gj2gwdanimation {
+      animation: 3.3s linear 10.7s 1 normal forwards running gwd-gen-1gj2gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-s9e8gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(-50px, 0px, 0px);
+        animation-timing-function: ease-in-out;
+      }
+      21.2121% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      78.7879% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        transform: translate3d(-50px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-s9e8gwdanimation {
+      animation: 3.3s linear 10.7s 1 normal forwards running gwd-gen-s9e8gwdanimation_gwd-keyframes;
+    }
+    .gwd-image-yr3b {
+      position: absolute;
+      width: 220px;
+      height: 103px;
+      left: 40px;
+      top: 500px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 100px, 0px);
+    }
+    @keyframes gwd-gen-ho5pgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 100px, 0px);
+        animation-timing-function: linear;
+      }
+      76.3514% {
+        transform: translate3d(0px, 100px, 0px);
+        animation-timing-function: ease-in-out;
+      }
+      79.7297% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      94.5946% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        transform: translate3d(0px, -350px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-ho5pgwdanimation {
+      animation: 14.8s linear 0s 1 normal forwards running gwd-gen-ho5pgwdanimation_gwd-keyframes;
+    }
+    .gwd-page-158u {
+      background-image: none;
+      background-color: rgb(232, 231, 233);
+    }
+    .gwd-image-veim {
+      position: absolute;
+      width: 184px;
+      left: 58px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 200px;
+      height: 91px;
+    }
+    @keyframes gwd-gen-waasgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      96.8153% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 0;
+        animation-timing-function: ease-out;
+      }
+      100% {
+        transform: translate3d(0px, 40px, 0px);
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-waasgwdanimation {
+      animation: 15.7s linear 0s 1 normal forwards running gwd-gen-waasgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-ofa4 {
+      position: absolute;
+      width: 120px;
+      height: 48px;
+      left: 90px;
+      top: 332px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 50px, 0px);
+    }
+    @keyframes gwd-gen-12xvgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 50px, 0px);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      96.9697% {
+        transform: translate3d(0px, 50px, 0px);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-12xvgwdanimation {
+      animation: 16.5s linear 0s 1 normal forwards running gwd-gen-12xvgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-k64v {
+      position: absolute;
+      top: 498px;
+      opacity: 0;
+      height: 51px;
+      width: 63px;
+      left: 165px;
+    }
+    .gwd-image-1v1t {
+      position: absolute;
+      width: 68px;
+      height: 68px;
+      left: 116px;
+      top: 490px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 130px, 0px);
+    }
+    .gwd-div-c2tu {
+      position: absolute;
+      left: 150px;
+      top: 498px;
+      height: 52px;
+      border-image-source: none;
+      border-image-width: 1;
+      border-image-outset: 0;
+      border-image-repeat: stretch;
+      border-color: rgb(192, 152, 90);
+      border-style: solid;
+      border-width: 0px 2px 0px 0px;
+      background-image: none;
+      background-color: rgb(232, 231, 233);
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: scale3d(1, 1, 1);
+      width: 90px;
+    }
+    .gwd-image-ofkh {
+      position: absolute;
+      top: 403px;
+      width: 123px;
+      height: 17px;
+      left: 89px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(200px, 0px, 0px);
+    }
+    .gwd-image-1snc {
+      position: absolute;
+      top: 403px;
+      width: 123px;
+      height: 26px;
+      left: 89px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+    }
+    @keyframes gwd-gen-m4ehgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(200px, 0px, 0px);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      97.1429% {
+        transform: translate3d(200px, 0px, 0px);
+        opacity: 0;
+        animation-timing-function: ease-out;
+      }
+      100% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-m4ehgwdanimation {
+      animation: 17.5s linear 0s 1 normal forwards running gwd-gen-m4ehgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1nltgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      97.2222% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 20px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1nltgwdanimation {
+      animation: 18s linear 0s 1 normal forwards running gwd-gen-1nltgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-qgv8gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 130px, 0px);
+        animation-timing-function: linear;
+      }
+      89.7436% {
+        transform: translate3d(0px, 130px, 0px);
+        animation-timing-function: linear;
+      }
+      92.3077% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      97.4359% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        transform: translate3d(-55px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-qgv8gwdanimation {
+      animation: 19.5s linear 0s 1 normal forwards running gwd-gen-qgv8gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-s8cagwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+        animation-timing-function: linear;
+      }
+      96.9231% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+        animation-timing-function: linear;
+      }
+      97.4359% {
+        opacity: 1;
+        transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+        animation-timing-function: linear;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(-90px, 0px, 0px) scale3d(1, 0.8, 1);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-s8cagwdanimation {
+      animation: 19.5s linear 0s 1 normal forwards running gwd-gen-s8cagwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1q1fgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      99.4764% {
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      100% {
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1q1fgwdanimation {
+      animation: 19.1s linear 0s 1 normal forwards running gwd-gen-1q1fgwdanimation_gwd-keyframes;
+    }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
   <script data-source="gwd_webcomponents_v1_min.js" data-version="2" data-exports-type="gwd_webcomponents_v1" src="gwd_webcomponents_v1_min.js"></script>
@@ -535,7 +867,7 @@
   <gwd-google-ad id="gwd-ad" polite-load="">
     <gwd-metric-configuration></gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
-      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="300px" data-gwd-height="600px" data-gwd-animation-labels="start,0">
+      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-158u" data-gwd-width="300px" data-gwd-height="600px" data-gwd-animation-labels="start,0">
         <div class="gwd-page-content gwd-page-size">
           <gwd-image id="titile1" source="assets/titile1.png" scaling="stretch" class="gwd-image-1f3b gwd-gen-9j6bgwdanimation"></gwd-image>
           <gwd-image id="img1-bg" source="assets/img1.jpg" scaling="stretch" class="gwd-image-17ud gwd-image-1iue gwd-gen-ljjmgwdanimation"></gwd-image>
@@ -554,8 +886,19 @@
           <gwd-image id="img4" source="assets/img4.jpg" scaling="stretch" class="gwd-image-17ud gwd-image-1g3t gwd-gen-131ygwdanimation"></gwd-image>
           <gwd-image id="header4" source="assets/header4.png" scaling="stretch" class="gwd-image-36fs gwd-gen-geejgwdanimation"></gwd-image>
           <gwd-image id="header4d" source="assets/header4d.png" scaling="stretch" class="gwd-image-12xa gwd-gen-17sygwdanimation"></gwd-image>
+          <gwd-image id="img5-bg" source="assets/img5.jpg" scaling="stretch" class="gwd-image-17ud gwd-image-1iue gwd-gen-1llfgwdanimation"></gwd-image>
+          <gwd-image id="img5" source="assets/img5.jpg" scaling="stretch" class="gwd-image-17ud gwd-image-1g3t gwd-gen-1gj2gwdanimation"></gwd-image>
+          <gwd-image id="header5d" source="assets/header5d.png" scaling="stretch" class="gwd-image-12xa gwd-gen-s9e8gwdanimation"></gwd-image>
           <gwd-image id="logo" source="assets/logo.png" scaling="stretch" class="gwd-image-1enp"></gwd-image>
-          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="12200"></div>
+          <gwd-image id="tiitle2" source="assets/tiitle2.png" scaling="stretch" class="gwd-image-yr3b gwd-gen-ho5pgwdanimation"></gwd-image>
+          <gwd-image id="long-text" source="assets/long-text.png" scaling="stretch" class="gwd-image-veim gwd-gen-waasgwdanimation"></gwd-image>
+          <gwd-image id="hashtag" source="assets/hashtag.png" scaling="stretch" class="gwd-image-ofa4 gwd-gen-12xvgwdanimation"></gwd-image>
+          <gwd-image id="icons-2" source="assets/icons-2.png" scaling="stretch" class="gwd-image-1snc gwd-gen-1nltgwdanimation"></gwd-image>
+          <gwd-image id="icons-1" source="assets/icons-1.png" scaling="stretch" class="gwd-image-ofkh gwd-gen-m4ehgwdanimation"></gwd-image>
+          <gwd-image id="PIF-text" source="assets/PIF-text2.png" scaling="stretch" class="gwd-image-k64v gwd-gen-1q1fgwdanimation"></gwd-image>
+          <div class="gwd-div-c2tu gwd-gen-s8cagwdanimation" id="PIF-line"></div>
+          <gwd-image id="PIF-logo" source="assets/PIF-logo.png" scaling="stretch" class="gwd-image-1v1t gwd-gen-qgv8gwdanimation"></gwd-image>
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="22000"></div>
         </div>
       </gwd-page>
     </gwd-pagedeck>
