--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       <a class="font-weight-bold" href="./zip/index.html">Download</a>
     </div>
 
-
-
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 300px;height: 600px;">
+      <iframe src="./publish/300-600/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
 
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 120px;height: 600px;">
       <iframe src="./publish/120-600/index.html" class="embed-responsive-item" frameborder="0"></iframe>
