--- a/zip/index.html
+++ b/zip/index.html
@@ -55,7 +55,7 @@
       <div class="card">
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="./300-600.zip">300-600</a>
+            <a class="nav-link" href="./300-600.zip">300-600</a>
           </li>
         </ul>
       </div>
