adding Download source files

--- a/zip/index.html
+++ b/zip/index.html
@@ -11,6 +11,10 @@
 
 <body>
   <div class="container py-5">
+    <div class="text-center">
+      <a class="font-weight-bold" href="./source_files.zip">Download source files</a>
+    </div>
+  
     <div class="card-columns mt-5">
       <div class="card">
         <ul class="card-body nav flex-column text-center">
